# rgr

./: .gitignore  README.md  текст.txt
backend/: .gitignore  README.md  pyproject.toml
backend/src/: config.py  main.py
backend/src/app/api/v1/endpoints/: ai_integration.py  get_token.py  summary.py
backend/src/app/core/: config.py
backend/src/app/models/: request_models.py
backend/src/app/services/: summarizer.py
backend/src/app/utils/: prompt_templates.py
frontend/src/: App.tsx
frontend/src/api/: index.ts
frontend/src/components/Header/: Header.tsx
frontend/src/config/: environments.ts
frontend/src/pages/Chat/: Chat.tsx
